refactor: Let the system-test only use the functional API