@@ -141,6 +141,24 @@
 
     <profiles>
         <profile>
+            <id>system-test</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration combine.self="override">
+                            <groups>system-test</groups>
+                            <argLine>
+                                --add-modules java.desktop
+                                --add-reads de.swiesend.secretservice=java.desktop
+                            </argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>coverage</id>
             <build>
                 <plugins>
@@ -260,6 +278,7 @@
                     <release>17</release>
                     <source>17</source>
                     <target>17</target>
+                    <testCompilerArgument>--add-modules=java.desktop</testCompilerArgument>
                 </configuration>
             </plugin>
             <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-source-plugin -->
@@ -329,6 +348,13 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.5.2</version>
+                <configuration>
+                    <excludedGroups>system-test</excludedGroups>
+                    <argLine>
+                        --add-modules java.desktop
+                        --add-reads de.swiesend.secretservice=java.desktop
+                    </argLine>
+                </configuration>
                 <dependencies>
                     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
                     <dependency>
